added email remainder system